--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "slim/slim": "^3.0",
         "slim/twig-view": "^2.4",
         "illuminate/database": "~5.1",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "bryanjhv/slim-session": "~3.0"
     }
 }
